--- a/docs/components/doc-sections/en/delimiters.html
+++ b/docs/components/doc-sections/en/delimiters.html
@@ -1,4 +1,4 @@
-<section class="section" e-ignore>
+<section class="section">
     <h1> <a id="delimiters" href="#delimiters"> Delimiters </a> </h1>
 
     <p>
@@ -23,13 +23,13 @@
 
     <h3> <a id="dlm_easy" href="#dlm_easy"> Easy </a> </h3>
 
-    <p>
+    <p e-ignore>
         To use this delimiter just do the following: <span class="note"> -e- [Content] - </span>
     </p>
 
     <h3> <a id="dlm_easy" href="#dlm_common"> Common </a> </h3>
 
-    <p>
+    <p e-ignore>
         To use this delimiter just do the following: <span class="note"> {{ [Content] }} </span>
     </p>
 
