--- a/docs/components/doc-sections/en/introduction.html
+++ b/docs/components/doc-sections/en/introduction.html
@@ -5,8 +5,8 @@
     <p>
         Easy.js, short for <span style="color:var(--easy-yellow)">Easy</span>
         and <span style="color:var(--easy-black)">Asyncronous Javascript</span>,
-        is a javascript library for building user interfaces and that helps in the
-        development of web applications, providing a synchronous interaction
+        is a javascript library for building user interfaces and helps in the
+        web applications development, providing a synchronous interaction
         between user interfaces and Javascript data.
     </p>
 
