--- a/docs/components/main.html
+++ b/docs/components/main.html
@@ -56,6 +56,18 @@
         </div>
     </div>
 
+
+    <div class="main-divider middle-content">
+        <div class="center-content">
+            <h3 class="main-page-description">
+                What's <span class="note">Easy.js</span> ? Is a javascript library for building user interfaces and helps in 
+                the web applications development, providing a synchronous interaction between user interfaces and 
+                Javascript data. In some ways and commands, it is very similar to 
+                <span class="note">Vue.js</span> and <span class="note">Angular.js</span>, but it handles things differently!
+            </h3>
+        </div>
+    </div>
+
     <div class="main-divider middle-content editor-divider">
         <div class="main-page-editor-container">
             <div class="description">
