--- a/docs/components/tutorial/en/structure/page.html
+++ b/docs/components/tutorial/en/structure/page.html
@@ -3,7 +3,7 @@
         <!-- Navegation -->
         <div class="top">
             <div class="prev">
-                <a href="/prev" class="center-icon fa fa-angle-left"></a>
+                <a class="center-icon fa fa-angle-left"></a>
             </div>
             <div class="menu-btn-container">
                 <div class="menu-btn" on:click="chaptersClosed = !chaptersClosed">
@@ -14,7 +14,7 @@
                 <h4 class="current-menu"> Introduction </h4>
             </div>
             <div class="next">
-                <a href="/next" class="center-icon fa fa-angle-right"></a>
+                <a class="center-icon fa fa-angle-right"></a>
             </div>
         </div>
 
@@ -108,7 +108,6 @@
                         <li><a href="#method_watch"> watch </a></li>
                         <li><a href="#method_set"> set </a></li>
                     </ul>
-                </li>
                 </li>
                 <li> <a i:href="/tutorial/components">
                         <h3>Components / Includers</h3>
