--- a/docs/components/top.html
+++ b/docs/components/top.html
@@ -14,8 +14,8 @@
             <li> <a :href="/tutorial"> Tutorial </a> </li>
             <li> <a href="docs.html"> Docs </a> </li>
             <li> <a href="connectors.html"> Connectors </a> </li>
-            <li> <span class="text"> Translations </span> <span class="fa fa-dot-circle-o dot"></span> </li>
-            <li> <a :href="/download">Download</a> </li>
+            <li class="hide-it"> <span class="text"> Translations </span> <span class="fa fa-dot-circle-o dot"></span> </li>
+            <li> <a>Download</a> </li>
             <li> <a href="https://github.com/AfonsoMatElias/easy" class="fa fa-github"></a> </li>
             <li> <a target="blank" href="https://www.facebook.com/easyjs" class="fa fa-facebook"></a> </li>
             <li on:click="darkMode = !darkMode"> <span class="fa {{ themeIco }}"></span> </li>
@@ -37,4 +37,7 @@
             }
         }
     }
+
+    // Exporting the scope object to accessable without $scope variable
+    this.export(this.scope);
 </script>
